2005-03-15  John Luke  <john.luke@gmail.com>

	* Gui/Workbench/Layout/SdiWorkspaceLayout.cs: add NoGrip flags
	to the documents section to match new dock API

2005-03-15  Lluis Sanchez Gual <lluis@novell.com>

	* Pads/SolutionPad/TreeViewPad.cs: implemented ITreeBuilder.UpdateAll()
	  method in TreeBuilder.
	* Pads/SolutionPad/ITreeBuilder.cs: Added UpdateAll method and some
	  documentation.
	* Pads/ProjectPad/ProjectNodeBuilder.cs: Don't remove files from the
	  tree if ShowAllFiles option is set.
	* Pads/ProjectPad/ProjectFileNodeBuilder.cs: Removed unused class.
	* Pads/ProjectPad/FolderNodeBuilder.cs: When adding a file, don't
	  duplicate nodes if ShowAllFiles option is set.
	* Internal/Project/Project/Collections/ProjectFileCollection.cs:
	  When removing a file, unset the ProjectFile's project. Removed 
	  indexer setter. Nobody uses it and it adds complexity.

2005-03-14  Lluis Sanchez Gual <lluis@novell.com>

	* Commands/MenuItemBuilders.cs
	* Gui/Components/SdMenuCheckBox.cs
	* Gui/Components/SdMenuCommand.cs:
	  Avoid subscribing self events since it can be a source of memory leaks.
	
	* Commands/ProjectBrowserCommands/ResourceFolderNodeCommands.cs,
	  Commands/ProjectBrowserCommands/ProjectNodeCommands.cs,
	  Commands/ProjectBrowserCommands/ReferenceFolderNodeCommands.cs,
	  Commands/ProjectBrowserCommands/FolderNodeCommands.cs,
	  Commands/ProjectBrowserCommands/CombineNodeCommands.cs,
	  Commands/ProjectBrowserCommands/GeneralNodeCommands.cs:
	  Modified to use the new tree navigation api.
	  
	* Services/Project/ProjectService.cs: call RestoreCombinePreferences
	  in the gui thread.
	* IconService.cs: Added helper method for changing the alpha of a pixbuf.
	* PadContentCollection.cs: Pads now have an Id. Use it.
	* SelectReferenceDialog.cs: Use a ProjectReferenceCollection instead
	  of an array list to return the results.
	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: Name dock items after